# Proto-Test

./: .gitignore  CMakeLists.txt  README.md  souce-contribute.md
_games/: settings.json
_games/shooter/: settings.json
doc/API/: Doxyfile  README.md
doc/User Manual/00 basic usage/: 00-introduction.md
games/: global-settings.json
games/default-templates/: game-folder-settings-template-structure.md  game-folder-settings-template.json  global-settings-template-structure.md  global-settings-template.json  templates-notations.md
games/default-templates/behavior-folder/: behavior-event-trigger.md  behavior-list.json  behavior-template-structure.md  behavior-template.json
games/default-templates/img-folder/: img-list-structure.md
games/default-templates/input-folder/: input-commands.md  input-list-structure.md  input-list.json  input-template-structure.md  input-template.json  inputCommands.md
games/default-templates/level-folder/: level-list-template.json  level-structure.md
games/default-templates/screen-folder/: screen-list.json  screen-tags.md  screen-tamplate.json  screen-template-structure.md  screen-template.json
games/default-templates/sprite-folder/: dynamicImage-template.json  objects.md  sprite-list.json  sprite-template-structure.md  sprite-template.json  sprite-template.md  type.md
games/demo_3/: settings.json
games/shooter/: settings.json
source/include/behavior/: PT_Behavior.h  PT_BehaviorState.h  PT_BehaviorStateEvent.h  PT_BehaviorStateEventCollision.h  PT_BehaviorStateEventInput.h  PT_BehaviorStateEventMisc.h  PT_BehaviorStateList.h
source/include/default/: PT_Application_default_buttonTemplate.c  PT_GameManager_default_buttonTemplate.h  PT_Graphics_default_fontList.h  PT_Graphics_default_imgFolders.h  PT_Graphics_default_imgList.h  PT_Graphics_default_settings.h  PT_InputManager_default_inputList.c  PT_LevelManager_default_levelList.h  PT_ScreenManager_default_screenList.c  PT_SoundManager_default_musicList.c  PT_SoundManager_default_sampleList.h
source/include/font/: PT_Font.h  PT_FontList.h
source/include/input/: PT_InputHandler.h  PT_InputHandlerList.h  PT_InputManager.h  PT_Keyboard.h  PT_Mouse.h
source/include/level/: PT_Level.h  PT_LevelLayer.h  PT_LevelList.h  PT_LevelManager.h  PT_LevelObjectLayer.h  PT_LevelTile.h  PT_LevelTileLayer.h  PT_LevelTileset.h
source/include/misc/: PT_Animation.h  PT_AnimationList.h  PT_Application.h  PT_CallbackList.h  PT_Camera.h  PT_Collider.h  PT_CollisionHandler.h  PT_CollisionHandlerList.h  PT_Game.h  (+10 more)
templates/default-templates/: game-folder-settings-template.json  global-settings-template-structure.md  global-settings-template.json
tools/file-bind/: CMakeLists.txt  README.md  version-log.txt
(+174 files in other folders)
